--- a/portofolio.html
+++ b/portofolio.html
@@ -77,7 +77,7 @@
 
           <ul class="portofolio-pictures_list">
             <li class="picture-item">
-              <a class="picture-link" href="/"></a>
+              <a class="picture-link" href="/">
               <div class="picture-description">
                 <p class="picture-details">
                   Technoduck is a state-of-the-art coronavirus distribution platform. Companies use this platform for digital espionage and attacks on competitors' secure servers.
@@ -141,7 +141,7 @@
 
             
               <li class="picture-item">
-                <a class="picture-link" href="/"></a>
+                <a class="picture-link" href="/">
                 <div class="picture-description">
                   <p class="picture-details">
                     Technoduck is a state-of-the-art coronavirus distribution platform. Companies use this platform for digital espionage and attacks on competitors' secure servers.
@@ -157,7 +157,7 @@
 
           
               <li class="picture-item">
-                <a class="picture-link" href="/"></a>
+                <a class="picture-link" href="/">
                 <div class="picture-description">
                   <p class="picture-details">
                     Technoduck is a state-of-the-art coronavirus distribution platform. Companies use this platform for digital espionage and attacks on competitors' secure servers.
@@ -203,7 +203,7 @@
             </li>
 
             <li class="picture-item">
-              <a class="picture-link" href="/"></a>
+              <a class="picture-link" href="/">
               <div class="picture-description">
                 <p class="picture-details">
                   Technoduck is a state-of-the-art coronavirus distribution platform. Companies use this platform for digital espionage and attacks on competitors' secure servers.
